--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,14 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - name: remove  node-modules and dist
+        run: rm -rf node_modules dist
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Preview
+        run: npm run preview
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
